# vael-fitness

./: .gitignore  railway.json
vael/: package-lock.json  package.json
vael-server/: Cargo.toml  Dockerfile
vael-server/.sqlx/: query-05f566a24f520bac6c527ff43833bdb07e7c06a89a4b64558da84458fcbac3dd.json
vael-server/migrations/: 20260210000001_init.sql  20260210011419_add_embeddings_to_workouts.sql
vael-server/src/: main.rs
vael-server/src/api/: auth.rs  chat.rs  health.rs  mod.rs  sync.rs
vael-server/src/db/: mod.rs
vael-server/src/service/: auth.rs  embeddings.rs  llm.rs  mod.rs
vael/public/: manifest.json
vael/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
vael/src/app/analytics/: page.tsx
vael/src/app/analytics/measurements/: page.tsx
vael/src/app/analytics/photos/: page.tsx
vael/src/app/capture/: page.tsx
vael/src/app/coach/: page.tsx
vael/src/app/fuel/: page.tsx
vael/src/app/fuel/log/: page.tsx
vael/src/app/life/: page.tsx
vael/src/app/life/check-in/: page.tsx
vael/src/app/life/habits/new/: page.tsx
vael/src/app/life/journal/: page.tsx
vael/src/app/social/: page.tsx
vael/src/app/train/: page.tsx
vael/src/app/train/active/: page.tsx
vael/src/app/train/history/: page.tsx
vael/src/app/train/rest/: page.tsx
vael/src/app/train/routines/new/: page.tsx
vael/src/components/: BottomNav.tsx
vael/src/components/ui/: button.tsx  card.tsx  input.tsx  slider.tsx
vael/src/lib/: db.ts
